# CrewAi

./: README.md  crew.py  crew_ai_using_open_router.ipynb  main.py  pyproject.toml
