[project]
name = "ai_powered_adaptive_learning_system"
version = "0.1.0"
description = "ai_powered_adaptive_learning_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
ai_powered_adaptive_learning_system = "ai_powered_adaptive_learning_system.main:run"
run_crew = "ai_powered_adaptive_learning_system.main:run"
train = "ai_powered_adaptive_learning_system.main:train"
replay = "ai_powered_adaptive_learning_system.main:replay"
test = "ai_powered_adaptive_learning_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
